# django-dbmi-client

./: .gitignore  .pre-commit-config.yaml  .releaserc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: code-scan.yml  deploy.yml  main.yml  maintenance-deploy.yml  prerelease-deploy.yml  test-deploy.yml  test.yml
dbmi_client/: __init__.py  admin.py  apps.py  auth.py  authn.py  authz.py  environment.py  fileservice.py  logging.py  middleware.py  reg.py  reporting.py  sentry.py  serializers.py  settings.py  support.py  views.py
dbmi_client/login/: __init__.py  apps.py  urls.py  views.py
dbmi_client/provider/: __init__.py  auth0.py  cognito.py  provider.py
dbmi_client/static/dbmi_client/login/css/: style.css
dbmi_client/templates/dbmi_client/login/: base.html  error.html  jwt.html  login.html  logout.html  token.html
dbmi_client/tests/: runtests.py  test_auth.py  test_authz.py
